# Advent-Of-Code

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  solve_day.py
2015/: Day 1-1.py  Day 1-2.py  Day 10-1.py  Day 10-2.py  Day 11-1.py  Day 11-2.py  Day 12-1.py  Day 12-2.py  Day 13-1.py  Day 13-2.py  Day 14-1.py  Day 14-2.py  Day 15-1.py  Day 15-2.py  Day 16 - input  Day 16-1.py  Day 16-2.py  Day 17 - input  Day 17-1.py  Day 17-2.py  Day 18 - input  Day 18-1.py  Day 18-2.py  Day 2-1.py  Day 2-2.py  Day 20-1.py  Day 20-2.py  Day 21 - input  Day 21-1.py  Day 21-2.py  Day 3-1.py  Day 3-2.py  Day 4-1.py  Day 4-2.py  Day 5-1.py  Day 5-2.py  Day 6-1.py  Day 6-2.py  Day 8-1.py  Day 8-2.py  (+2 more)
2016/: Day 1-1.py  Day 1-2.py  Day 1.py  Day 2-1.py  Day 2-2.py  Day 3-1.py  Day 3-2.py  Day 4-1.py  Day 4-2.py  Day 5-1.py  Day 5-2.py  Day 6-1.py  Day 6-2.py
2017/: Day 1-1.py  Day 1-2.py  Day 1.py  Day 15 - 1.py  Day 15 - 2.py  Day 17 - 1.py  Day 17 - 2.py  Day 2-1.py  Day 2-2.py  Day 4 - 1.py  Day 4 - 2.py  Day 7 - Both.py  Day 8 - Both.py
2018/: Day 1-1.py  Day 1-2.py  Day 11-1.py  Day 11-2.py  Day 2-1.py  Day 2-2.py  Day 3-1.py  Day 3-2.py  Day 5-1.py  Day 5-2.py  Day 7-1.py  Day 7-2.py  Day 8-1.py  Day 8-2.py
2022/rust/01/: Cargo.toml
2022/rust/02/: Cargo.toml
2022/rust/03/: Cargo.toml
2022/rust/04/: Cargo.toml
2022/rust/05/: Cargo.toml
2022/rust/06/: Cargo.toml
2022/rust/07/: Cargo.toml
2022/rust/07/src/: main.rs
2022/rust/08/: Cargo.toml
2022/rust/09/: Cargo.toml
utils/rust/aoc-utils/: Cargo.toml
utils/rust/solve-day/: Cargo.toml
(+18 files in other folders)
