[package]
name = "aoc-2022-07"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
date_time.workspace = true
indoc.workspace = true
aoc-parse.workspace = true
regex.workspace = true

aoc-utils = { path = "../../../utils/rust/aoc-utils" }